--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ananthapuramu District Basketball Association</title>
-    <link href="https://fonts.googleapis.com/css2?family=Garamond&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arial&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Garamond', serif;
-            background-color: #f4f4f9;
-            color: #333;
+            font-family: 'Arial', sans-serif;
+            background: radial-gradient(circle at center, #4B0082, #000000);
+            color: #FFFFFF;
             line-height: 1.6;
+            overflow-x: hidden;
         }
         header {
-            background-color: #87CEEB;
-            color: #000000;
+            background: linear-gradient(90deg, #552583, #3F2055);
+            color: #FFFFFF;
             padding: 20px 0;
             text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(85, 37, 131, 0.7);
             position: sticky;
             top: 0;
             z-index: 10;
+            transition: box-shadow 0.3s ease;
         }
         header h1 {
             margin: 0;
+            font-family: 'Arial Black', sans-serif;
             font-size: 2rem;
+            font-weight: bold;
+            color: #FFFFFF; /* Removed text-shadow to revoke shiny effect */
         }
         nav {
-            background-color: #1a237e;
+            background-color: #000000;
             padding: 10px 0;
         }
         nav ul {
@@ -41,12 +46,16 @@
             gap: 20px;
         }
         nav ul li a {
-            color: white;
+            color: #FDB927;
             text-decoration: none;
+            font-family: 'Arial', sans-serif;
             font-weight: bold;
+            text-transform: uppercase;
+            transition: color 0.3s ease, box-shadow 0.3s ease;
         }
         nav ul li a:hover {
-            color: #bbdefb;
+            color: #FFD700;
+            box-shadow: 0 0 10px #FDB927;
         }
         .content {
             max-width: 1200px;
@@ -59,6 +68,20 @@
             height: 300px;
             overflow: hidden;
             margin-bottom: 20px;
+            border: 2px solid #FDB927;
+            border-radius: 8px;
+            box-shadow: 0 0 10px #FDB927;
+        }
+        #slideshow::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to top, rgba(0, 0, 0, 0.3), transparent);
+            z-index: 1;
+            pointer-events: none;
         }
         .slide {
             position: absolute;
@@ -71,6 +94,7 @@
             text-align: center;
             background-size: cover;
             color: white;
+            animation: slideShine 5s infinite;
         }
         .slide.active {
             display: flex;
@@ -82,21 +106,38 @@
             opacity: 0.7;
         }
         .slide .title {
+            font-family: 'Arial Black', sans-serif;
             font-size: 2rem;
             margin: 10px 0;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+            text-shadow: 0 0 5px #552583;
+            z-index: 2;
         }
         .slide .description {
+            font-family: 'Arial', sans-serif;
             font-size: 1.2rem;
             padding: 0 20px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+            text-shadow: 0 0 5px #552583;
+            z-index: 2;
+        }
+        @keyframes slideShine {
+            0% { filter: brightness(1); }
+            50% { filter: brightness(1.2); }
+            100% { filter: brightness(1); }
+        }
+        .media-section {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
         }
         #youtube-carousel {
             position: relative;
-            width: 100%;
+            width: 50%;
             height: 200px;
             overflow: hidden;
-            margin-bottom: 20px;
+            border: 2px solid #FDB927;
+            border-radius: 8px;
+            background-color: #F5F5F5;
+            box-shadow: inset 0 0 10px rgba(253, 185, 39, 0.5);
         }
         .video-slide {
             position: absolute;
@@ -110,19 +151,29 @@
             display: flex;
         }
         .video-slide iframe {
-            width: 320px;
-            height: 180px;
+            width: 100%;
+            height: 100%;
         }
         #social-feeds {
-            background-color: white;
+            width: 50%;
+            height: 200px;
+            background-color: #F5F5F5;
             padding: 15px;
             border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
+            box-shadow: inset 0 0 10px rgba(253, 185, 39, 0.5);
+            overflow-y: auto;
+            color: #000000;
         }
         .feed h3 {
             margin-top: 0;
-            color: #1a237e;
+            font-family: 'Arial Black', sans-serif;
+            font-size: 1.5rem;
+            color: #000000;
+        }
+        .feed h4 {
+            margin: 10px 0 5px;
+            font-family: 'Arial', sans-serif;
+            color: #000000;
         }
         .feed ul {
             list-style: none;
@@ -131,22 +182,42 @@
         .feed ul li {
             margin-bottom: 10px;
             padding: 10px;
-            background-color: #f9f9f9;
+            background-color: #E0E0E0;
             border-radius: 5px;
+            color: #000000;
+            box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+        .feed p {
+            color: #000000;
         }
         section {
-            background-color: white;
+            background-color: #F5F5F5;
             padding: 20px;
             margin-bottom: 20px;
             border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(253, 185, 39, 0.3), inset 0 0 10px rgba(253, 185, 39, 0.2);
+            color: #000000;
+        }
+        #team, #schedule {
+            background-color: #552583;
+            color: #FDB927;
+            box-shadow: 0 0 15px #FDB927;
+        }
+        #team h2, #schedule h2 {
+            font-family: 'Arial Black', sans-serif;
+            font-size: 1.8rem;
+            color: #FDB927;
+        }
+        #team ul li, #schedule ul li {
+            font-family: 'Arial', sans-serif;
+            color: #FDB927;
         }
         #contact {
-            padding: 10px 20px; /* Slimmed down */
+            padding: 10px 20px;
             margin-bottom: 20px;
         }
         #contact p {
-            margin: 5px 0; /* Reduced spacing */
+            margin: 5px 0;
         }
         .social-section {
             position: fixed;
@@ -160,11 +231,13 @@
         }
         .social-section p {
             margin: 0;
+            font-family: 'Arial', sans-serif;
             font-size: 0.9rem;
-            color: #333;
-            background-color: rgba(255, 255, 255, 0.8);
+            color: #FDB927;
+            background-color: #000000;
             padding: 5px 10px;
             border-radius: 5px;
+            box-shadow: 0 0 5px #FDB927;
         }
         .social-icons {
             display: flex;
@@ -176,25 +249,35 @@
             justify-content: center;
             width: 40px;
             height: 40px;
-            background-color: white;
-            border: 2px solid #333;
+            background-color: #FDB927;
+            border: 2px solid #552583;
             border-radius: 50%;
             text-decoration: none;
             font-size: 1.2rem;
-            transition: transform 0.3s;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 0 5px #FDB927;
         }
         .social-icons a:hover {
             transform: scale(1.1);
+            box-shadow: 0 0 15px #FDB927;
         }
-        .x { color: #000000; }
-        .facebook { color: #1877f2; }
-        .instagram { color: #e4405f; }
+        .x { color: #552583; }
+        .facebook { color: #552583; }
+        .instagram { color: #552583; }
         footer {
-            background-color: #1a237e;
-            color: white;
+            background-color: #000000;
+            color: #FDB927;
             text-align: center;
             padding: 10px 0;
+            font-family: 'Arial', sans-serif;
             font-size: 0.9rem;
+            box-shadow: 0 0 10px #FDB927;
+            animation: footerShine 3s infinite;
+        }
+        @keyframes footerShine {
+            0% { box-shadow: 0 0 10px #FDB927; }
+            50% { box-shadow: 0 0 20px #FFD700; }
+            100% { box-shadow: 0 0 10px #FDB927; }
         }
         @media (max-width: 768px) {
             nav ul {
@@ -213,12 +296,16 @@
             .slide .description {
                 font-size: 1rem;
             }
-            #youtube-carousel {
+            .media-section {
+                flex-direction: column;
+            }
+            #youtube-carousel, #social-feeds {
+                width: 100%;
                 height: 150px;
             }
             .video-slide iframe {
-                width: 280px;
-                height: 158px;
+                width: 100%;
+                height: 100%;
             }
             .social-section {
                 bottom: 10px;
@@ -242,45 +329,47 @@
     </nav>
     <div class="content">
         <div id="slideshow">
-            <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1518611012118-69661456b98f?q=80&w=1200&auto=format&fit=crop');">
-                <div class="title">Welcome to ADBA Season!</div>
+            <div class="slide active" style="background-image: url('https://scontent.fvga2-1.fna.fbcdn.net/v/t39.30808-6/485094591_1198615425602270_2071492870669749534_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=meHMpRW6MqQQ7kNvwHiyUzt&_nc_oc=AdnfmjcE8SMWtUKqoqecyRTQ5WkzumVJde267DmN_Yz6PhhwwJBdBqb1N2n07tpvluBzCaOYBX97hAp7H_inkgXT&_nc_zt=23&_nc_ht=scontent.fvga2-1.fna&_nc_gid=3abWgz6H10pabRSiKqQKhg&oh=00_AfEs1qKvBQzs0qRZInex60UWVMhCSy6QY9NfXlxs3c4_zA&oe=6816FF78?q=80&w=1200&auto=format&fit=crop');">
+                <div class="title">Welcome to ADBA!</div>
                 <div class="description">Join us for an exciting 2025 basketball season in Ananthapuramu District.</div>
             </div>
-            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1515523110800-9415d13b84a9?q=80&w=1200&auto=format&fit=crop');">
-                <div class="title">Game Highlights</div>
-                <div class="description">Check out our latest victory on April 28, 2025, at the local court!</div>
+            <div class="slide" style="background-image: url('https://scontent.fvga2-1.fna.fbcdn.net/v/t39.30808-6/463230970_2876914819122797_1663557415765265944_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=7tvXdVmSZ-kQ7kNvwFuwwLa&_nc_oc=AdkLL9c_oig15RjtOqdCGEO_urGLR76t0dQeUdY9tQuXKWx8yp7Tojef5HO3cZoJuZi7c9El5D6aqlWx2sfLoCld&_nc_zt=23&_nc_ht=scontent.fvga2-1.fna&_nc_gid=Y1XforssaAhQtEfVlYR09g&oh=00_AfETZrrTiIPiJB0YFH9401Z5L1-M6XgWxYXTteuMvckqsg&oe=68170452?q=80&w=1200&auto=format&fit=crop');">
+                <div class="title">Our beloved Bhaskar Reddy sir</div>
+                <div class="description">Remembering our former Basketball president of AP </div>
             </div>
-            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1464349153735-7db50ed83c84?q=80&w=1200&auto=format&fit=crop');">
+            <div class="slide" style="background-image: url('https://scontent.fvga2-5.fna.fbcdn.net/v/t39.30808-6/462368510_2867181306762815_8496039909620920712_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=oxcQyy_I8H4Q7kNvwHaxMr-&_nc_oc=AdnaVkA9A7ZvJadozSy9mFCGsVV5eWgCVHoISVxYqYMuzkMyanbBVsap4TWlOSa49FGYV9sh_AProJy2BZuYr4f-&_nc_zt=23&_nc_ht=scontent.fvga2-5.fna&_nc_gid=TR42l3Yyanhkk7UxFyPa5w&oh=00_AfGmeLhaJqPPKnUA6BzUC_PkmSRQU06y2oMpaaEqfEi9bw&oe=6816E4EC?q=80&w=1200&auto=format&fit=crop');">
                 <div class="title">Community Day</div>
-                <div class="description">Join our free event on May 10, 2025, at Ananthapuramu Stadium.</div>
+                <div class="description">Where you all draw from Ananthapuramu SSBN Stadium.</div>
             </div>
         </div>
-        <div id="youtube-carousel">
-            <div class="video-slide active">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="media-section">
+            <div id="youtube-carousel">
+                <div class="video-slide active">
+                    <iframe src="https://www.youtube.com/watch?v=bfiwfx6y6Wg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-slide">
+                    <iframe src="https://www.youtube.com/watch?v=f7C5uYCiAs0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="video-slide">
+                    <iframe src="https://www.youtube.com/watch?v=5t7E1qQWegI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
-            <div class="video-slide">
-                <iframe src="https://www.youtube.com/embed/3tmd-ClpJxA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div id="social-feeds" class="feed">
+                <h3>Social Updates</h3>
+                <h4>Twitter</h4>
+                <ul>
+                    <li>Apr 29, 2025: Excited for our next game vs. Titans! #ADBA #Basketball [Mock Post]</li>
+                    <li>Apr 28, 2025: Great win today! Thanks to our fans. #Ananthapuramu #ADBA [Mock Post]</li>
+                    <li>Apr 27, 2025: Training camp starts tomorrow. Stay tuned! #ADBA [Mock Post]</li>
+                </ul>
+                <h4>Facebook</h4>
+                <ul>
+                    <li>Apr 29, 2025: Join us for the Community Day on May 10! Details on our page. [Placeholder]</li>
+                    <li>Apr 28, 2025: Highlights from today's victory! Check our page for photos. [Placeholder]</li>
+                    <li>Apr 27, 2025: Training updates coming soon. Like us for more! [Placeholder]</li>
+                </ul>
+                <p>Note: Replace with official embeds from your ADBA Twitter and Facebook pages.</p>
             </div>
-            <div class="video-slide">
-                <iframe src="https://www.youtube.com/embed/ZHVVc1Nkx2o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
-        <div id="social-feeds" class="feed">
-            <h3>Social Updates</h3>
-            <h4>Twitter</h4>
-            <ul>
-                <li>Apr 29, 2025: Excited for our next game vs. Titans! #ADBA #Basketball [Mock Post]</li>
-                <li>Apr 28, 2025: Great win today! Thanks to our fans. #Ananthapuramu #ADBA [Mock Post]</li>
-                <li>Apr 27, 2025: Training camp starts tomorrow. Stay tuned! #ADBA [Mock Post]</li>
-            </ul>
-            <h4>Facebook</h4>
-            <ul>
-                <li>Apr 29, 2025: Join us for the Community Day on May 10! Details on our page. [Placeholder]</li>
-                <li>Apr 28, 2025: Highlights from today's victory! Check our page for photos. [Placeholder]</li>
-                <li>Apr 27, 2025: Training updates coming soon. Like us for more! [Placeholder]</li>
-            </ul>
-            <p>Note: Replace with official embeds from your ADBA Twitter and Facebook pages.</p>
         </div>
         <section id="team">
             <h2>Our Team</h2>
@@ -293,26 +382,26 @@
         <section id="schedule">
             <h2>Upcoming Games</h2>
             <ul>
-                <li>May 5, 2025 - vs. Rivals @ 7 PM</li>
-                <li>May 12, 2025 - vs. Titans @ 6 PM</li>
-                <li>May 19, 2025 - vs. Eagles @ 8 PM</li>
+                <li>U23 3X3  Inter District Basketball championship in the last week of May 2025 Or The First week of June at Vijayawada.[Later the camp will be in Chittoor. Nationals will be from 12th to 14th June 2025 at Kochi , Kerala.]</li>
+                <li>May 15th to 18th, 2025 at PES public school, Chittoor, Andhra Pradesh</li>
+                <li></li>
             </ul>
         </section>
         <section id="news">
             <h2>Latest News</h2>
-            <p>April 29, 2025: Exciting win against the Titans last week! Stay tuned for more updates.</p>
+            <p>Stay tuned for more updates.</p>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>Email: info@adba.org</p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Email: basketballadba@gmail.com</p>
+            <p>Phone: (123)</p>
         </section>
     </div>
     <div class="social-section">
         <p>Follow us for more content!</p>
         <div class="social-icons">
             <a href="https://x.com" target="_blank" class="x" title="Follow on X"><i class="fab fa-x-twitter"></i></a>
-            <a href="https://facebook.com" target="_blank" class="facebook" title="Follow on Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/ATPDBA/" target="_blank" class="facebook" title="Follow on Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://instagram.com" target="_blank" class="instagram" title="Follow on Instagram"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
