--- a/index.html
+++ b/index.html
@@ -381,11 +381,11 @@
                 <div class="title">Welcome to ADBA!</div>
                 <div class="description">Join us for an exciting 2025 basketball season in Ananthapuramu District.</div>
             </div>
-            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1515523110800-9415d13b84a9?q=80&w=1200&auto=format&fit=crop');">
+            <div class="slide" style="background-image: url('https://scontent.fhyd11-2.fna.fbcdn.net/v/t39.30808-6/463230970_2876914819122797_1663557415765265944_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=7tvXdVmSZ-kQ7kNvwEpIWRP&_nc_oc=Adlc9Yh0gaCiU7TAldvsdWPxV4-fZ_nn3LVY6bs77Br_x2Q5XxqJJZ8_85R8tjCvtlMAFWSQBhvLIOsOHzib6VOF&_nc_zt=23&_nc_ht=scontent.fhyd11-2.fna&_nc_gid=ooCb-KZTBuANlenbJhkYmA&oh=00_AfEhJunvpIwh-0bBdcSXTbPiBwDboQJ-dEkXE_q4OWGLLA&oe=68170452');">
                 <div class="title">Our beloved Bhaskar Reddy sir</div>
                 <div class="description">Remembering our former Basketball president of AP</div>
             </div>
-            <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1464349153735-7db50ed83c84?q=80&w=1200&auto=format&fit=crop');">
+            <div class="slide" style="background-image: url('https://scontent.fhyd11-1.fna.fbcdn.net/v/t39.30808-6/462368510_2867181306762815_8496039909620920712_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=oxcQyy_I8H4Q7kNvwG-L-vW&_nc_oc=Adl9hIQq-77QikLPsf8keWT4YfdAl2bED-gqatMtN_1MfuBtkDhR9PYdrpaH9j-LEpuRqvaOEDPp8eO06brm1kvM&_nc_zt=23&_nc_ht=scontent.fhyd11-1.fna&_nc_gid=OmY04Ok7waBV6_zAwDlLQA&oh=00_AfFBG6JSRw7k7V_j5_s_dSM7lC6TOzlW0B52Bxos4eoCTA&oe=6816E4EC');">
                 <div class="title">Community Day</div>
                 <div class="description">Where you all draw from Ananthapuramu SSBN Stadium.</div>
             </div>
@@ -410,9 +410,9 @@
                 <h3>Social Updates</h3>
                 <h4>Twitter</h4>
                 <ul>
-                    <li>Apr 29, 2025: Excited for our next game vs. Titans! #ADBA #Basketball [Mock Post]</li>
-                    <li>Apr 28, 2025: Great win today! Thanks to our fans. #Ananthapuramu #ADBA [Mock Post]</li>
-                    <li>Apr 27, 2025: Training camp starts tomorrow. Stay tuned! #ADBA [Mock Post]</li>
+                    <li>Apr 29, 2025: Excited for our next game #ADBA #Basketball </li>
+                    <li>Apr 28, 2025: Thanks to our fans. #Ananthapuramu #ADBA </li>
+                    <li>Apr 27, 2025: Training camp starts tomorrow. Stay tuned! #ADBA </li>
                 </ul>
                 <h4>Facebook</h4>
                 <ul>
@@ -430,9 +430,9 @@
         <section id="team">
             <h2>Our Team</h2>
             <ul>
-                <li>Coach: John Doe - 10 years of experience</li>
-                <li>Player 1: Jane Smith - Point Guard</li>
-                <li>Player 2: Mike Johnson - Center</li>
+                <li>Coach: Afash Khan & Mohan Raju - 3 years of experience</li>
+                <li>Player 1:  - Point Guard</li>
+                <li>Player 2:  - Center</li>
             </ul>
         </section>
         <section id="schedule">
