--- a/index.html
+++ b/index.html
@@ -412,9 +412,8 @@
         <section id="schedule">
             <h2>Upcoming Games</h2>
             <ul>
-                <li>U23 3X3 Inter District Basketball championship in the last week of May 2025 Or The First week of June at Vijayawada.[Later the camp will be in Chittoor. Nationals will be from 12th to 14th June 2025 at Kochi , Kerala.]</li>
-                <li>May 15th to 18th, 2025 at PES public school, Chittoor, Andhra Pradesh</li>
-                <li></li>
+                <li>U23 3X3 Inter District Basketball championship in the last week of May 2025 Or The First week of June at Vijayawada. Later the camp will be in Chittoor. Nationals will be from 12th to 14th June 2025 at Kochi , Kerala.</li>
+                <li>Sub-Junior Inter district Tournament from May 15th to 18th, 2025 at PES public school, Chittoor, Andhra Pradesh</li>
             </ul>
         </section>
         <section id="news">
