--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         #slideshow {
             position: relative;
             width: 100%;
-            height: 400px;
+            height: 300px;
             overflow: hidden;
             margin-bottom: 20px;
             border: 2px solid #FDB927;
@@ -90,12 +90,14 @@
             display: none;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between; /* Changed to space-between to position elements */
             text-align: center;
             background-size: cover;
             background-position: center;
             color: white;
             animation: slideShine 5s infinite;
+            padding-bottom: 20px; /* Added padding to ensure description isn't too close to edge */
+            box-sizing: border-box;
         }
         .slide.active {
             display: flex;
@@ -112,6 +114,7 @@
             margin: 10px 0;
             text-shadow: 0 0 5px #552583;
             z-index: 2;
+            padding-top: 20px; /* Added to position title near top */
         }
         .slide .description {
             font-family: 'Arial', sans-serif;
@@ -119,6 +122,9 @@
             padding: 0 20px;
             text-shadow: 0 0 5px #552583;
             z-index: 2;
+            background: rgba(0, 0, 0, 0.5); /* Added semi-transparent background for readability */
+            width: 100%; /* Ensure description spans full width */
+            padding: 10px 0; /* Added padding for better appearance */
         }
         @keyframes slideShine {
             0% { filter: brightness(1); }
@@ -133,7 +139,7 @@
         #youtube-carousel {
             position: relative;
             width: 50%;
-            height: 300px;
+            height: 200px;
             overflow: hidden;
             border: 2px solid #FDB927;
             border-radius: 8px;
@@ -358,7 +364,7 @@
                 <div class="title">Our beloved Bhaskar Reddy sir</div>
                 <div class="description">Remembering our former Basketball president of AP</div>
             </div>
-            <div class="slide" style="background-image: url('https://scontent.fhyd11-1.fna.fbcdn.net/v/t39.30808-6/462368510_2867181306762815_8496039909620920712_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=oxcQyy_I8H4Q7kNvwG-L-vW&_nc_oc=Adl9hIQq-77QikLPsf8keWT4YfdAl2bED-gqatMtN_1MfuBtkDhR9PYdrpaH9j-LEpuRqvaOEDPp8eO06brm1kvM&_nc_zt=23&_nc_ht=scontent.fhyd11-1.fna&_nc_gid=OmY04Ok7waBV6_zAwDlLQA&oh=00_AfFBG6JSRw7k7V_j5_s_dSM7lC6TOzlW0B52Bxos4eoCTA&oe=6816E4EC');">
+            <div class="slide" style="background-image: url('https://scontent.fhyd11-1.fna.fbcdn.net/v/t39.30808-6/462368510_2867181306762815_8496039909620920712_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=oxcQyy_I8H4Q7kNvwG-L-vW&_nc_oc=Adl9hIQq-77QikLPsf8keWT4YfdAl2bED-gqatMtN_1MfuBtkDhR9PYdrpaH9j-LEpuRqvaOEDPp8eO06brm1kvM&_nc_zt=23&_nc_ht=scontent.fhyd11-1.fna&_nc_gid=OmY04Ok7waBV6_zAwDlLQA&oh=00_AfFBG6JSRw7kV_j5_s_dSM7lC6TOzlW0B52Bxos4eoCTA&oe=6816E4EC');">
                 <div class="title">Community Day</div>
                 <div class="description">Where you all draw from Ananthapuramu SSBN Stadium.</div>
             </div>
@@ -403,17 +409,17 @@
         <section id="team">
             <h2>Our Team</h2>
             <ul>
-                <li>Coaches: </li>
-                <li>Afash Khan & Mohan Raju - Indoor Stadium</li>
-                <li>Narendra Krishna - SSBN Degree college </li>
-                <li>Jeelan Basha - PTC grounds</li>
+                <li>Coach: Afash Khan & Mohan Raju - 3 years of experience</li>
+                <li>Player 1:  - Point Guard</li>
+                <li>Player 2:  - Center</li>
             </ul>
         </section>
         <section id="schedule">
             <h2>Upcoming Games</h2>
             <ul>
-                <li>U23 3X3 Inter District Basketball championship in the last week of May 2025 Or The First week of June at Vijayawada. Later the camp will be in Chittoor. Nationals will be from 12th to 14th June 2025 at Kochi , Kerala.</li>
-                <li>Sub-Junior Inter district Tournament from May 15th to 18th, 2025 at PES public school, Chittoor, Andhra Pradesh</li>
+                <li>U23 3X3 Inter District Basketball championship in the last week of May 2025 Or The First week of June at Vijayawada.[Later the camp will be in Chittoor. Nationals will be from 12th to 14th June 2025 at Kochi , Kerala.]</li>
+                <li>May 15th to 18th, 2025 at PES public school, Chittoor, Andhra Pradesh</li>
+                <li></li>
             </ul>
         </section>
         <section id="news">
