--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 <div class="title">Our beloved Bhaskar Reddy sir</div>
                 <div class="description">Remembering our former Basketball president of AP</div>
             </div>
-            <div class="slide" style="background-image: url('https://scontent.fhyd11-1.fna.fbcdn.net/v/t39.30808-6/462368510_2867181306762815_8496039909620920712_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=oxcQyy_I8H4Q7kNvwG-L-vW&_nc_oc=Adl9hIQq-77QikLPsf8keWT4YfdAl2bED-gqatMtN_1MfuBtkDhR9PYdrpaH9j-LEpuRqvaOEDPp8eO06brm1kvM&_nc_zt=23&_nc_ht=scontent.fhyd11-1.fna&_nc_gid=OmY04Ok7waBV6_zAwDlLQA&oh=00_AfFBG6JSRw7kV_j5_s_dSM7lC6TOzlW0B52Bxos4eoCTA&oe=6816E4EC');">
+            <div class="slide" style="background-image: url('https://scontent.fvga2-5.fna.fbcdn.net/v/t39.30808-6/462368510_2867181306762815_8496039909620920712_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=FApe5-9afMIQ7kNvwGThzFt&_nc_oc=AdkmHaGgU_a-e2KRG4SybWnQ_g2dSaYcLlSV1acwBlQ4Pah8HXiQKfD82y3-EOiMyp3HdOTIcr8lnjtYg1plZRhG&_nc_zt=23&_nc_ht=scontent.fvga2-5.fna&_nc_gid=df8sJNnZMPzLViHZMObVqQ&oh=00_AfF2t42dGUtcCnubPxFI_ItfHexEtvjB6ztRwo-XnozuYQ&oe=681A68EC');">
                 <div class="title">Community Day</div>
                 <div class="description">Where you all draw from Ananthapuramu SSBN Stadium.</div>
             </div>
