--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
     <div class="social-section">
         <p>Follow us for more content!</p>
         <div class="social-icons">
-            <a href="https://x.com" target="_blank" class="x" title="Follow on X"><i class="fab fa-x-twitter"></i></a>
+            <a href="https://x.com/basketballadba" target="_blank" class="x" title="Follow on X"><i class="fab fa-x-twitter"></i></a>
             <a href="https://www.facebook.com/ATPDBA/" target="_blank" class="facebook" title="Follow on Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://instagram.com" target="_blank" class="instagram" title="Follow on Instagram"><i class="fab fa-instagram"></i></a>
         </div>
