--- a/index.html
+++ b/index.html
@@ -409,16 +409,19 @@
         <section id="team">
             <h2>Our Team</h2>
             <ul>
-                <li>Coach: Afash Khan & Mohan Raju - 3 years of experience</li>
-                <li>Player 1:  - Point Guard</li>
-                <li>Player 2:  - Center</li>
+                <li>Coaches: </li>
+                <li>    - Afash Khan & Mohan Raju - Indoor Stadium, Ashok Nagar</li>
+                <li>    - Narendra Krishna - SSBN degree college </li>
+                <li>    - Jeelan Basha - PTC grounds </li>
+                <li></li>
+                <li></li>
             </ul>
         </section>
         <section id="schedule">
             <h2>Upcoming Games</h2>
             <ul>
                 <li>U23 3X3 Inter District Basketball championship in the last week of May 2025 Or The First week of June at Vijayawada.[Later the camp will be in Chittoor. Nationals will be from 12th to 14th June 2025 at Kochi , Kerala.]</li>
-                <li>May 15th to 18th, 2025 at PES public school, Chittoor, Andhra Pradesh</li>
+                <li>Inter District Sub-juniors from May 15th to 18th, 2025 at PES public school, Chittoor, Andhra Pradesh</li>
                 <li></li>
             </ul>
         </section>
