--- a/index.html
+++ b/index.html
@@ -410,9 +410,9 @@
             <h2>Our Team</h2>
             <ul>
                 <li>Coaches: </li>
-                <ul><li>    - Afash Khan & Mohan Raju - Indoor Stadium, Ashok Nagar</li>
-                <li>    - Narendra Krishna - SSBN degree college </li>
-                <li>    - Jeelan Basha - PTC grounds </li>
+                <ul><li>Afash Khan & Mohan Raju - Indoor Stadium, Ashok Nagar</li>
+                <li>Narendra Krishna - SSBN degree college </li>
+                <li>Jeelan Basha - PTC grounds </li>
                 <li></li>
                 <li></li> </ul>
             </ul>
