--- a/index.html
+++ b/index.html
@@ -410,10 +410,10 @@
             <h2>Our Team</h2>
             <ul>
                 <li>Coaches: </li>
-                <ul><li>Afash Khan & Mohan Raju - Indoor Stadium, Ashok Nagar</li>
+                <ul><li>Afash Khan - Indoor Stadium, Ashok Nagar</li>
                 <li>Narendra Krishna - SSBN degree college </li>
                 <li>Jeelan Basha - PTC grounds </li>
-                <li></li>
+                <li>Mohan Raju - JNTU ground</li>
                 <li></li> </ul>
             </ul>
         </section>
