--- a/index.html
+++ b/index.html
@@ -410,13 +410,12 @@
                 <h3>Social Updates</h3>
                 <h4>Twitter</h4>
                 <ul>
-                    <li>Apr 29, 2025: Excited for our next game #ADBA #Basketball </li>
-                    <li>Apr 28, 2025: Thanks to our fans. #Ananthapuramu #ADBA </li>
-                    <li>Apr 27, 2025: Training camp starts tomorrow. Stay tuned! #ADBA </li>
+                  <a class="twitter-timeline" href="https://twitter.com/basketballadba?ref_src=twsrc%5Etfw">Tweets by basketballadba</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    
                 </ul>
                 <h4>Facebook</h4>
                 <ul>
-                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FATPDBA&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="400" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FATPDBA&tabs=timeline&width=400&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="400" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                     
                 </ul>
             </div>
